# advent-of-code

./: Cargo.toml
2021/day1/: Cargo.toml
2021/day1/src/: lib.rs  main.rs  window.rs
2021/day2/: Cargo.toml
2021/day2/src/: lib.rs  main.rs  sub_command.rs
2021/day3/: Cargo.toml
2021/day3/src/: lib.rs  main.rs
utils/: Cargo.toml
utils/src/: app_errors.rs  cmd.rs  file_reader.rs  lib.rs
