[package]
edition = "2021"
name    = "day1"
version = "0.1.0"

[lib]
name = "libday1"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

thiserror = "1.0.30"

[profile.dev]
debug     = true
opt-level = 0

[profile.release]
debug     = false
opt-level = 3
